[package]
name = "nitrokey-test"
version = "0.1.0"
edition = "2018"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0+"
homepage = "https://crates.io/crates/nitrokey-test"
repository = "https://github.com/d-e-s-o/nitrokey-test.git"
readme = "README.md"
categories = ["development-tools::testing", "development-tools"]
keywords = ["nitrokey", "test"]
description = """
Supporting test infrastructure for the nitrokey crate and others using it.
"""

[lib]
proc-macro = true

[dependencies.proc-macro2]
version = "0.4"

[dependencies.quote]
version = "0.6"

[dependencies.syn]
version = "0.15"
features = ["full"]
